--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Personal Site</title>
+<style>
+
+    body {
+        background-color: #EAF6F6 ;
+    }
+</style>
+
+
+
 </head>
-<body>
+<body style="background-color:#EAF6F6;">
 <!--header-->
 <section>
     <table>
         <tr>
-          <td><img src="img/circle-cropped.png"></td>
+          <td><img src="img/circle-cropped.png" alt="Yahya Ali" style="width:150px;height:150px;"></td>
           <td><h1>Yahya Ali</h1>
           <p><b>Web Developer</b></p>
           <p>Slcc Student - 2016...current, Majoring in Computer Science currently enrolled in Slcc CSIS Program</p>
